@@ -1,3 +1,8 @@
+2011-02-15	Alexander Hansen	<alexkhansen@users.sourceforge.net>
+
+	* postinstall.pl.in:	Modify regex pattern in CVS/Root detection to allow for
+							quotes, which is needed for proxy support.
+
 2011-01-15  Dave Morrison  <drm@finkproject.org>
 
 	* inject.pl, install.sh, postinstall.pl.in: update copyright
